--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,14 @@
 //*= require_tree ./components
 
 @import "bootstrap";
-
+@import "font-awesome";
 @import "../stylesheets/components/home/home.scss";
 @import "../stylesheets/components/navbar/navbar.scss";
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Welbaum';
+}
