--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,8 +15,8 @@
     </div>
 </div>
 <%= render partial: 'components/carrousel/carrousel_books', format: :erb %>
-
 <br>
 <br>
-
 <%= render partial: 'components/carrousel/carrousel_partners', format: :erb %>
+
+<%= render partial: 'components/footer/footer', format: :erb %>
