--- a/app/views/colega_tradutors/_form.html.erb
+++ b/app/views/colega_tradutors/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: colega_tradutor) do |form| %>
+<%= form_with(model: colega_tradutor, class:"form-colegas") do |form| %>
   <% if colega_tradutor.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(colega_tradutor.errors.count, "error") %> prohibited this colega_tradutor from being saved:</h2>
@@ -10,18 +10,19 @@
       </ul>
     </div>
   <% end %>
+  <div class="form-controller">
+    <div class="form-input-material">
+      <%= form.label :name, style: "display: block" %>
+      <%= form.text_field :name %>
+    </div>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
+    <div class="form-input-material">
+      <%= form.label :url_page, style: "display: block" %>
+      <%= form.text_field :url_page %>
+    </div>
 
-  <div>
-    <%= form.label :url_page, style: "display: block" %>
-    <%= form.text_field :url_page %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <div class="form-input-material">
+      <%= form.submit %>
+    </div>
   </div>
 <% end %>
