--- a/app/views/link_externos/_form.html.erb
+++ b/app/views/link_externos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: link_externo) do |form| %>
+<%= form_with(model: link_externo, class:"form-links") do |form| %>
   <% if link_externo.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(link_externo.errors.count, "error") %> prohibited this link_externo from being saved:</h2>
@@ -10,18 +10,22 @@
       </ul>
     </div>
   <% end %>
+  <div class="form-controller">
+    <div class="form-input-material">
 
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
+      <div class="field">
+        <%= form.text_field :title, class:"input-field", autocomplete:"off", placeholder:"Titulo" %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :url_page, style: "display: block" %>
-    <%= form.text_field :url_page %>
-  </div>
+    <div class="form-input-material">
+      <div class="field">
+        <%= form.text_field :url_page, class:"input-field", autocomplete:"off", placeholder:"Link da pagina" %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.submit %>
+    <div class="form-input-material">
+      <%= form.submit %>
+    </div>
   </div>
 <% end %>
