--- a/app/assets/stylesheets/components/input buttonADM/inputStyle.scss
+++ b/app/assets/stylesheets/components/input buttonADM/inputStyle.scss
@@ -24,5 +24,29 @@
             color: #000000;
         }
     }
+
+    input{
+        background-color: #fbdbbb;
+        padding: 0px 10px 0px 10px;
+        text-transform: uppercase;
+        font-weight: bold;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+    }
+
+    input:hover{
+        background-color: #fbdbbbd2;
+        padding: 0px 20px 0px 20px;
+        transition: ease-in-out 0.5s;
+        -webkit-transition: ease-in-out 0.5s;
+        -moz-transition: ease-in-out 0.5s;
+        -ms-transition: ease-in-out 0.5s;
+        -o-transition: ease-in-out 0.5s;
+}
 }
 
